small changes before database

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
 
         <section id="overview-section" class="overview-section section">
             <h2 class="section-title">
-                Why We Research:
+                Why We Research
             </h2>
             <div class="section-intro">
                 The purpose of this research is...
