--- a/Views/Home/Burial.cshtml
+++ b/Views/Home/Burial.cshtml
@@ -3,3 +3,203 @@
 *@
 @{
 }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Bootstrap 5 website template for SaaS startups</title>
+    <!-- Meta -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,300italic,400italic,500italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Noto+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <!-- FontAwesome JS -->
+    <script defer src="assets/fontawesome/js/all.js"></script>
+    <!-- Global CSS -->
+    <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+    <!-- Plugins CSS -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!-- Theme CSS -->
+    <link id="theme-style" rel="stylesheet" href="assets/css/theme-1.css">
+</head>
+
+<body class="support-page">
+
+
+    <section class="heading-section section section-on-bg">
+        <div class="hero-wrapper">
+            <div class="hero-holder"></div>
+            <div class="hero-mask-gradient"></div>
+        </div><!--//hero-wrapper-->
+        <div class="container heading-content">
+            <h2 class="headline">How can we help?</h2>
+            <form class="search-box">
+                <div class="row g-2 text-center justify-content-center">
+                    <div class="col-12 col-md-auto">
+                        <label class="sr-only" for="help-search-form">Search</label>
+                        <input id="help-search-form" name="search-form" type="text" class="form-control help-search-form" placeholder="Search questions...">
+                    </div><!--//col-->
+                    <div class="col-12 col-md-auto">
+                        <button type="submit" class="btn btn-primary btn-single-icon"><i class="fas fa-search"></i></button>
+                    </div>
+
+                </div><!--//row-->
+            </form><!--//search-box-->
+            <div class="actions">
+                <a class="scrollto-no-offset scrollto" href="#topics-block">View Popular Topics</a>
+                <a class="scrollto-no-offset scrollto" href="#topics-block"><img src="assets/images/arrow-icon.svg" alt=""></a>
+            </div><!--//actions-->
+        </div><!--//container-->
+    </section><!--//heading-section-->
+
+
+    <div class="topics-block" id="topics-block">
+        <div class="container text-center">
+            <h2 class="block-heading ">Popular Help Topics</h2>
+            <div class="row">
+                <div class="item col-12 col-md-4">
+                    <div class="item-inner">
+                        <div class="figure-holder">
+                            <i class="material-icons">&#xE8E8;</i>
+                        </div>
+                        <h4 class="title">Quick Start</h4>
+                        <div class="intro">Intro lorem ipsum dolor sit amet consectetuer adipiscing elit.</div>
+                        <a class="link" href="#"></a>
+                    </div><!--//item-inner-->
+                </div><!--//item-->
+                <div class="item col-12 col-md-4">
+                    <div class="item-inner">
+                        <div class="figure-holder">
+                            <i class="material-icons">&#xE6C4;</i>
+                        </div>
+                        <h4 class="title">Charts</h4>
+                        <div class="intro">Intro lorem ipsum dolor sit amet consectetuer adipiscing elit.</div>
+                        <a class="link" href="#"></a>
+                    </div><!--//item-inner-->
+                </div><!--//item-->
+                <div class="item col-12 col-md-4">
+                    <div class="item-inner">
+                        <div class="figure-holder">
+                            <i class="material-icons">&#xE913;</i>
+                        </div>
+                        <h4 class="title">Mobile Apps</h4>
+                        <div class="intro">Intro lorem ipsum dolor sit amet consectetuer adipiscing elit.</div>
+                        <a class="link" href="#"></a>
+                    </div><!--//item-inner-->
+                </div><!--//item-->
+
+                <div class="item col-12 col-md-4">
+                    <div class="item-inner">
+                        <div class="figure-holder">
+                            <i class="material-icons">&#xE87B;</i>
+                        </div>
+                        <h4 class="title">Extensions</h4>
+                        <div class="intro">Intro lorem ipsum dolor sit amet consectetuer adipiscing elit.</div>
+                        <a class="link" href="#"></a>
+                    </div><!--//item-inner-->
+                </div><!--//item-->
+                <div class="item col-12 col-md-4">
+                    <div class="item-inner">
+                        <div class="figure-holder">
+                            <i class="material-icons">&#xE87A;</i>
+                        </div>
+                        <h3 class="title">Explore</h3>
+                        <div class="intro">Intro lorem ipsum dolor sit amet consectetuer adipiscing elit.</div>
+                        <a class="link" href="#"></a>
+                    </div><!--//item-inner-->
+                </div><!--//item-->
+                <div class="item col-12 col-md-4">
+                    <div class="item-inner">
+                        <div class="figure-holder">
+                            <i class="material-icons">&#xE869;</i>
+                        </div>
+                        <h3 class="title">Build</h3>
+                        <div class="intro">Intro lorem ipsum dolor sit amet consectetuer adipiscing elit.</div>
+                        <a class="link" href="#"></a>
+                    </div><!--//item-inner-->
+                </div><!--//item-->
+
+
+            </div><!--//row-->
+        </div><!--//container-->
+    </div><!--//topics-block-->
+
+    <div class="articles-block" id="articles-block">
+        <div class="container text-center">
+            <h2 class="block-heading">Featured Articles</h2>
+            <div class="row text-start">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <ul>
+                        <li><a class="text-link" href="#">How to lorem ipsum?</a></li>
+                        <li><a class="text-link" href="#">How to curabitur malesuada hendrerit?</a></li>
+                        <li><a class="text-link" href="#">Can I gravida quis diam ac euismod?</a></li>
+                        <li><a class="text-link" href="#">What is consectetur aliquam tortor?</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <ul>
+                        <li><a class="text-link" href="#">What is lorem ipsum?</a></li>
+                        <li><a class="text-link" href="#">Can I gravida quis diam ac euismod?</a></li>
+                        <li><a class="text-link" href="#">Can I  aliquam tortor?</a></li>
+                        <li><a class="text-link" href="#">How to lorem ipsum?</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <ul>
+                        <li><a class="text-link" href="#">How to lorem ipsum?</a></li>
+                        <li><a class="text-link" href="#">How to curabitur malesuada hendrerit?</a></li>
+                        <li><a class="text-link" href="#">Can I gravida quis diam ac euismod?</a></li>
+                        <li><a class="text-link" href="#">What is consectetur aliquam tortor?</a></li>
+                    </ul>
+                </div>
+            </div><!--//row-->
+        </div><!--//container-->
+    </div><!--//articles-block-->
+
+    <div class="tips-block" id="tips-block">
+        <div class="container text-center">
+            <h2 class="block-heading">Tips &amp; Tricks</h2>
+            <div class="row text-start justify-content-center">
+                <div class="item col-12 col-md-6 col-lg-4">
+                    <div class="item-inner">
+                        <div class="figure-holder"><i class="material-icons">&#xE90F;</i></div>
+                        <div class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </div>
+                    </div><!--//item-inner-->
+                </div><!--//item-->
+                <div class="item col-12 col-md-6 col-lg-4">
+                    <div class="item-inner">
+                        <div class="figure-holder"><i class="material-icons">&#xE8FF;</i></div>
+                        <div class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </div>
+                    </div><!--//item-inner-->
+                </div><!--//item-->
+                <div class="item col-12 col-md-6 col-lg-4">
+                    <div class="item-inner">
+                        <div class="figure-holder"><i class="material-icons">&#xE864;</i></div>
+                        <div class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </div>
+                    </div><!--//item-inner-->
+                </div><!--//item-->
+
+
+            </div><!--//row-->
+        </div><!--//container-->
+    </div><!--//tips-block-->
+
+    <div class="extra-block">
+        <div class="container text-center">
+            <h4 class="block-heading">Can't find what you are looking for?</h4>
+            <a class="btn btn-primary" href="contact.html">Contact Us</a>
+        </div>
+    </div>
+
+</body>
+</html>
+
+
+
+
+
+
