--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -44,7 +44,8 @@
             <h2 class="headline">Fag el-Gamous Cemetery Database <br> BYU Egypt Excavation Project</h2>
             <p class="tagline">Good databasing is good research, check out our data!</p>
             <div class="actions">
-                <a class="btn btn-cta btn-primary" href="#" data-bs-toggle="modal" data-bs-target="#signup-modal">Burial Summary List & Records</a>
+                <!-- <a class="btn btn-cta btn-primary" href="#" data-bs-toggle="modal" data-bs-target="#signup">Burial Summary List & Records</a>-->
+                <a class="btn btn-cta btn-primary" asp-action="Burial" >Burial Summary List & Records</a>
                 <br class="d-sm-inline-block d-md-none">
                 <a href="#" class="video-play-trigger" data-bs-toggle="modal" data-bs-target="#modal-video"><img class="play-icon" src="assets/images/play-icon.svg" alt="">See mummification in action!</a>
             </div>
