--- a/Views/Home/AddNotes.cshtml
+++ b/Views/Home/AddNotes.cshtml
@@ -9,7 +9,7 @@
 
  *@* adding notes about the mummy*@
 
-<h2>Quotes</h2>
+<h2>Add Notes</h2>
 <hr />
 <div class="container">
     <div class="row">
