--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,21 +37,10 @@
                 </button>
                 <div id="navbar-collapse" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
+
                         <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="features.html">Burial Summary List & Records</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="dropdown-toggle nav-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">More <i class="fas fa-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="about.html">Is this the real life?</a></li>
-                                <li><a class="dropdown-item" href="story-single.html">Is this a fantasy?</a></li>
-                                <li><a class="dropdown-item" href="blog.html">Caught in a landside,</a></li>
-                                <li><a class="dropdown-item" href="blog-single.html">No escape from reality</a></li>
-                                <li><a class="dropdown-item" href="support.html">Open your eyes,</a> </li>
-                                <li><a class="dropdown-item" href="career.html">Look up to the skies and see,</a></li>
-                                <li><a class="dropdown-item" href="job-single.html">I'm just a poor boy, I need no sympathy,</a></li>
-                                <li><a class="dropdown-item" href="contact.html">Because I'm easy come, easy go,</a></li>
-                            </ul>
-                        </li><!--//dropdown-->
+
+                        <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="Burial">Burial Summary List & Records</a></li>
                         <li class="nav-item"><a class="nav-link login-trigger" href="#" data-bs-toggle="modal" data-bs-target="#login-modal">Log in</a></li>
                         <li class="nav-item nav-item-cta last"><a class="btn-signup" href="#" data-bs-toggle="modal" data-bs-target="#signup-modal">Sign Up</a></li>
                     </ul><!--//nav-->
