Changed DBContext references

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
+@model IEnumerable<CarbonDating>
+
 @*A professional-looking landing page that describes the project and has a link to view the burial information*@
 
 <!DOCTYPE html>
@@ -121,6 +123,10 @@
                 <div class="row">
                     <div class="features-content-wrapper col-12 col-md-7 com-lg-7">
                         <div class="intro">
+                            @foreach (var x in Model)
+                            {
+                                <p>@x.LocationId</p>
+                            }
                             Our database offers many great things for BYU researchers whether it be for collecting data on mummies or any other endeavour.
                         </div><!--//intro-->
                         <ul class="feature-list list-unstyled">
