--- a/wwwroot/assets/css/theme-6.css
+++ b/wwwroot/assets/css/theme-6.css
@@ -229,7 +229,7 @@ textarea {
   -webkit-appearance: none; }
 
 .form-group {
-    margin-bottom: 10px; }
+  margin-bottom: 10px; }
 
 #back-to-top {
   -webkit-transition: all 0.4s ease-in-out;
@@ -1722,9 +1722,10 @@ textarea {
   margin-bottom: 30px; }
 
 .job-single-block {
-  max-width: 1100px; 
-  margin: 0 auto;
-  padding: 90px 30px; }
+    max-width: 1100px; 
+    margin: 0 auto;
+    padding: 90px 30px;
+}
   .job-single-block .job-details .subtitle {
     margin-top: 30px;
     margin-bottom: 15px;
