--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
     <header id="header" class="header">
         <div class="container">
             <h1 class="logo">
-                <a href="index.html"><img src="~/assets/images/logo.svg" alt=""><span class="text">Fag el-Gamous</span></a>
+                <a asp-controller="Home" asp-action="Index"><img src="~/assets/images/logo.svg" alt=""><span class="text">Fag el-Gamous</span></a>
             </h1><!--//logo-->
             <nav class="main-nav navbar navbar-right navbar-expand-md">
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-collapse">
@@ -40,11 +40,23 @@
                 </button>
                 <div id="navbar-collapse" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-
                         <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="Index">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="Form">Form</a></li>
                         <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="EditForm">Edit Form</a></li>
                         <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="Burial">Burial Summary List & Records</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="dropdown-toggle nav-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">More<i class="fas fa-angle-down"></i></a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="AddNotes"> Add Field Notes</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="AddMummy">Add Mummy Information</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="DeleteRecord">Delete Records</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="ManageUsers">Manage User Accounts</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="UploadPhotos">Upload Photos</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="UploadNotes">Upload Notes</a></li>
+                                <li><a class="dropdown-item" asp-controller="Home" asp-action="UploadBooks">Upload Books</a></li>
+                            </ul>
+                        </li><!--//dropdown-->
+                        <partial name="_LoginPartial" />
                         <li class="nav-item"><a class="nav-link login-trigger" href="#" data-bs-toggle="modal" data-bs-target="#login-modal">Log in</a></li>
                         <li class="nav-item nav-item-cta last"><a class="btn-signup" href="#" data-bs-toggle="modal" data-bs-target="#signup-modal">Sign Up</a></li>
                     </ul><!--//nav-->
