--- a/Views/Home/Burial.cshtml
+++ b/Views/Home/Burial.cshtml
@@ -4,64 +4,62 @@
 
 @model OperationDigger.Models.ViewModels.IndexViewModel
     <html>
-        <head>
-            <link rel="stylesheet" href="~/css/burialstyle.css">
-            
-        </head>
-        <body>
+    <head>
+        <link rel="stylesheet" href="~/css/burialstyle.css">
+        <link rel="stylesheet" href="~/js/site.js">
+    </head>
+    <body>
+        <div>
+            <vc:filter />
+        </div>
 
-            <div class="text-center m-1">
-                <div class="m-4">
-                    @if (Model.BurialId == null)
-                    {
-                        <h2 class="display-4">All Burial Ids</h2>
-                    }
-                    else
-                    {
-                        <h2 class="display-4">@Model.BurialId</h2>
-                    }
-                </div>
+        <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+        <table class="table" id="myTable">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col" class="text-dark">Location</th>
+                    <th scope="col" class="text-dark">BurialNs</th>
+                    <th scope="col" class="text-dark">BurialEw</th>
+                    <th scope="col" class="text-dark">LowEw</th>
+                    <th scope="col" class="text-dark">HighEw</th>
 
-                <div>
-                    <vc:filter />
-                </div>
-
+                    <th scope="col" class="text-dark"></th>
+                    <th scope="col" class="text-dark"></th>
+                </tr>
+            </thead>
+            <tbody>
                 @foreach (var x in Model.Burials)
                 {
-                    <div class="card text-center m-1">
-                        <div class="card-body">
-                            <h5 class="card-title">@x.LocationId  @x.BurialNs </h5>
-                            <p class="card-text">
-                                @x.BurialEw <br />
-                                @x.HighNs, @x.LowEw  @x.HighEw
-                            </p>
-                            <p>@x.BurialSubplot</p>
-                        </div>
-                    </div>
+                    <tr>
+                        <td class="text-dark">@x.LocationId</td>
+                        <td class="text-dark">@x.BurialNs</td>
+                        <td class="text-dark">@x.BurialEw.</td>
+                        <td class="text-dark">@x.LowEw</td>
+                        <td class="text-dark">@x.HighEw</td>
+                    </tr>
                 }
-            </div>
+            </tbody>
+        </table>
+        <div page-info="@Model.PageNumbering"
+             page-url-burialId="@Model.BurialId"
+             page-classes-enabled="true"
+             page-class="btn"
+             page-class-normal="btn-primary"
+             page-class-selected="btn-warning"
+             class="btn-group pull-right m-1">
+        </div>
 
-            <div page-info="@Model.PageNumbering"
-                 page-url-burialId="@Model.BurialId"
-                 page-classes-enabled="true"
-                 page-class="btn"
-                 page-class-normal="btn-primary"
-                 page-class-selected="btn-warning"
-                 class="btn-group pull-right m-1">
-
-
-            </div>
-
-
-
-        </body>
-        <script>
-            $(document).ready(function () {
-              $('.dropdown-submenu a.test').on("click", function(e){
-                $(this).next('ul').toggle();
-                e.stopPropagation();
-                e.preventDefault();
-              });
-            });
-        </script>
+    </body>
 </html>
+
+
+
+<script>
+    $(document).ready(function () {
+        $('.dropdown-submenu a.test').on("click", function(e){
+        $(this).next('ul').toggle();
+        e.stopPropagation();
+        e.preventDefault();
+        });
+    });
+</script>
